package com.ventas.dto;

public class EmpleadoDto extends PersonaDto{
    public String cargo;
}